# beachcomb

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/beachcomb/: __init__.py  __main__.py  audit.py  cli.py  core.py  date_recovery.py  exiftoold.py  hashing.py  image_processing.py  renaming.py  report_generator.py  type_detection.py  utils.py  validation.py
tests/: test_cli_basic.py  test_symbols.py
