[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "beachcomb"
version = "0.1.2"
description = "Analyze & sort carved files by filetype and date with dedup, integrity checks and reporting."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Chris Ferebee" }]
keywords = ["recovery", "files", "carving", "photorec", "sorting", "metadata"]
dependencies = [
    # Example dependencies (uncomment or adjust to match your actual code)
    # "typer>=0.12,<0.13",
    # "rich>=13,<14",
    # "pillow>=10,<12",
]

[project.urls]
Homepage = "https://github.com/your-username/beachcomb"
Issues = "https://github.com/your-username/beachcomb/issues"

[project.scripts]
beachcomb = "beachcomb.cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["F","E","W","I","B","UP","ANN","C90"]
ignore = ["ANN101","ANN102"]
fix = true

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
